test/spec_vectors/simd_i16x8_sat_arith/fail/module_5.wat
(module (func (result v128) (i16x8.add_sat_s (i32.const 0) (f32.const 0.0))))